lecture 5 exercise solution, lecture 6 source code/presentation/exercise

--- a/Source_Codes/ZP3CS/Lecture5/Lecture5.csproj
+++ b/Source_Codes/ZP3CS/Lecture5/Lecture5.csproj
@@ -13,6 +13,9 @@
     <None Update="addresses.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="clients.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
