--- a/Source_Codes/ZP3CS/Lecture6/Lecture6.csproj
+++ b/Source_Codes/ZP3CS/Lecture6/Lecture6.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Views\CompanyManagementWindow.xaml.cs">
       <DependentUpon>CompanyManagementWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\EmployeesPage.xaml.cs">
+      <DependentUpon>EmployeesPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\ClientsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -107,6 +110,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\Menu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\EmployeesPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
