--- a/Source_Codes/ZP3CS/Lecture6/Lecture6.csproj
+++ b/Source_Codes/ZP3CS/Lecture6/Lecture6.csproj
@@ -58,6 +58,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Data\DataLoader.cs" />
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Views\CompanyManagementWindow.xaml.cs">
       <DependentUpon>CompanyManagementWindow.xaml</DependentUpon>
     </Compile>
@@ -93,7 +95,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Styles\Clients.xaml">
+    <Page Include="Styles\Profiles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -138,6 +140,9 @@
     </EmbeddedResource>
     <Resource Include="Fonts\RobotoSlab-Regular.ttf" />
     <None Include="Data\clients.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\employees.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
