--- a/Source_Codes/ZP3CS/Lecture8/Lecture8.csproj
+++ b/Source_Codes/ZP3CS/Lecture8/Lecture8.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DataClasses\" />
+    <ProjectReference Include="..\DataClasses\DataClasses.csproj" />
   </ItemGroup>
 
 </Project>
